// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectStepScreen renders correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={Array []}
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
  <SafeAreaView />
</Component>
`;

exports[`SelectStepScreen should render foreground header correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Icon
      name="addStepIcon"
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 36,
        }
      }
      type="MissionHub"
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 36,
        }
      }
      type="header"
    >
      Add Steps of Faith
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0)",
          "color": "#ffffff",
          "fontSize": 16,
          "lineHeight": 24,
          "paddingHorizontal": 50,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
    />
  </Flex>
</View>
`;

exports[`SelectStepScreen should render sticky header correctly 1`] = `
<SafeAreaView
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flexDirection": "row",
        "height": 65,
        "paddingTop": 20,
      },
      undefined,
      null,
    ]
  }
>
  <Flex
    align="start"
    justify="center"
    style={
      Object {
        "paddingLeft": 5,
      }
    }
    value={1}
  />
  <Flex
    align="center"
    justify="center"
    style={Object {}}
    value={4}
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "white",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      ADD STEPS OF FAITH
    </MyText>
  </Flex>
  <Flex
    align="end"
    justify="center"
    style={
      Object {
        "paddingRight": 5,
      }
    }
    value={1}
  />
</SafeAreaView>
`;

exports[`mapStateToProps should provide necessary props for me 1`] = `
Object {
  "myId": "123",
  "suggestions": Array [
    Object {
      "body": "test 1",
      "id": "1",
    },
  ],
}
`;

exports[`mapStateToProps should provide necessary props for others 1`] = `
Object {
  "myId": "123",
  "suggestions": Array [
    Object {
      "body": "test 1",
      "id": "1",
    },
  ],
}
`;

exports[`renderBackButton should render back button 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={Array []}
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
  <SafeAreaView />
  <Connect(BackButton)
    absolute={true}
    customNavigate={[Function]}
  />
</Component>
`;

exports[`renderSaveButton should render save button 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={
        Array [
          Object {
            "body": "test 1",
            "id": "1",
            "selected": true,
          },
          Object {
            "body": "test 2",
            "id": "2",
          },
          Object {
            "body": "test 3",
            "id": "3",
          },
          Object {
            "body": "test 4",
            "id": "4",
          },
        ]
      }
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
  <SafeAreaView>
    <Flex
      align="center"
      justify="end"
    >
      <Button
        onPress={[Function]}
        style={
          Object {
            "width": 750,
          }
        }
        text="ADD TO MY STEPS"
        type="secondary"
      />
    </Flex>
  </SafeAreaView>
</Component>
`;
